Bmi calculator sector done

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
-<body class="primary-font black-bg">
-    <header class="header-bg">
+<body class="primary-font black-bg ">
+    <header class="header-bg ">
         <nav class="navbar">
             <i class="fit" style="margin-left: 3vh">Fitness</i>
             <div class="anchor-container">
@@ -25,7 +25,8 @@
             <div class="banner-parent">
                 <div class="text-container">
                     <h1 class="title-text banner-title">Get body in <span>shape</span> & stay healthy</h1>
-                    <p class="parapgraph-text">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                    <p class="parapgraph-text">A huge selection of health and fitness content, healthy recipes and
+                        transformation stories to help you get fit and stay fit!</p>
                     <button class="join-btn">Join Club Now!</button>
                     <button class="download-btn">Download App</button>
                 </div>
@@ -48,11 +49,12 @@
 
     </header>
     <main>
-        <section class="change-habit-section">
+        <section class="change-habit-section ">
             <div class="habit-container">
                 <div class="habit-texts">
                     <h1 class="habit-title">Change Your Habits</h1>
-                    <p class="parapgraph-text">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                    <p class="parapgraph-text">We believe fitness should be accessible to everyone, everywhere,
+                        regardless of income or access to a gym.</p>
                 </div>
                 <div class="habit-img-container">
                     <div class="img-card">
@@ -61,17 +63,17 @@
                         <p class="parapgraph-text">We believe fitness should be accessible to everyone</p>
                     </div>
                     <div class="img-card">
-                        <img  class="img-b" src="./assests/images/image 2.png" alt="">
+                        <img class="img-b" src="./assests/images/image 2.png" alt="">
                         <h4 class="title-text">Time</h4>
                         <p class="parapgraph-text">We believe fitness should be accessible to everyone</p>
                     </div>
                     <div class="img-card">
-                        <img  class="img-b" src="./assests/images/image 4.png" alt="">
+                        <img class="img-b" src="./assests/images/image 4.png" alt="">
                         <h4 class="title-text">Practice</h4>
                         <p class="parapgraph-text">We believe fitness should be accessible to everyone</p>
                     </div>
                     <div class="img-card">
-                        <img  class="img-b" src="./assests/images/image 5.png" alt="">
+                        <img class="img-b" src="./assests/images/image 5.png" alt="">
                         <h4 class="title-text">Weight Loss</h4>
                         <p class="parapgraph-text">We believe fitness should be accessible to everyone</p>
                     </div>
@@ -79,11 +81,12 @@
                 </div>
             </div>
         </section>
-        <section class="run-section">
+        <section class="run-section ">
             <div class="run-parent">
                 <div class="run-texts">
                     <h1 class="title-text run-title">Run an Extra <br> Mile Easily</h1>
-                    <p class="parapgraph-text">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                    <p class="parapgraph-text">We believe fitness should be accessible to everyone, everywhere,
+                        regardless of income or access to a gym. With hundreds of professional workouts.</p>
                     <button class="join-btn">Join Now</button>
                 </div>
                 <div class="run-img">
@@ -91,17 +94,62 @@
                 </div>
             </div>
         </section>
-        <section class="bmi-cal-section">
+        <section class="bmi-cal-section ">
             <div class="bmi-cal-container">
                 <h1 class="title-text bmi-cal-title">BMI Calculator</h1>
-                <p class="parapgraph-text">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                <p class="parapgraph-text">We believe fitness should be accessible to everyone, everywhere, regardless
+                    of income or access to a gym.</p>
             </div>
 
         </section>
-        <section class="bmi-cal-chart-section">
-            
+        <section class="bmi-cal-chart-section ">
+            <div class="bmi-cal-parent">
+                <div class="cal-table">
+                    <h3 class="title-text">BMI Calculator Chart</h3>
+                    <table>
+                        <thead>
+                            <tr>
+                                <td>BMI</td>
+                                <td>Weight Status</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Below 18.5</td>
+                                <td>Underweight</td>
+                            </tr>
+                            <tr>
+                                <td>18.5-24.9</td>
+                                <td>Healthy</td>
+                            </tr>
+                            <tr>
+                                <td>25-29.9</td>
+                                <td>Overweight</td>
+                            </tr>
+                            <tr>
+                                <td>30.0-and above</td>
+                                <td>Obse</td>
+                            </tr>
+                        </tbody>
+
+                    </table>
+                </div>
+                <div class="bmi-input">
+                    <h3 class="title-text">Calculate Your BMI</h3>
+                    <p class="parapgraph-text">We believe fitness should be accessible to everyone, everywhere,
+                        regardless of income or access to a gym. </p>
+                    <input class="input-bmi" type="text" placeholder="Hight/cm">
+                    <input class="input-bmi" type="text " placeholder="Weight/kg">
+                    <br>
+                    <input class="input-bmi" type="text " placeholder="Age">
+                    <input class="input-bmi" type="text" placeholder="Sex">
+                    <br>
+                    <input class="inpt-long" type="text" placeholder="Select An activity factor">
+                </div>
+            </div>
+
         </section>
-         
+
 
     </main>
     <footer>
