team section making start

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <section class="bmi-cal-chart-section ">
             <div class="bmi-cal-parent">
                 <div class="cal-table">
-                    <h3 class="title-text">BMI Calculator Chart</h3>
+                    <h3 class="title-text bmi-cal-title">BMI Calculator Chart</h3>
                     <table>
                         <thead>
                             <tr>
@@ -134,8 +134,8 @@
 
                     </table>
                 </div>
-                <div class="bmi-input">
-                    <h3 class="title-text">Calculate Your BMI</h3>
+                <div class="bmi-input ">
+                    <h3 class="title-text bmi-cal-title">Calculate Your BMI</h3>
                     <p class="parapgraph-text">We believe fitness should be accessible to everyone, everywhere,
                         regardless of income or access to a gym. </p>
                     <input class="input-bmi" type="text" placeholder="Hight/cm">
@@ -145,9 +145,77 @@
                     <input class="input-bmi" type="text" placeholder="Sex">
                     <br>
                     <input class="inpt-long" type="text" placeholder="Select An activity factor">
+                    <br>
+                    <br>
+                    <button class="join-btn"> Calculate</button>
                 </div>
             </div>
 
+        </section>
+        <section class="Meet-out-team">
+            <div class="team-container">
+                <div class="team-text">
+                    <h1 class="title-text ti-meet">Meet Our Team</h1>
+                    <p class="parapgraph-text">We believe fitness should be accessible to everyone, everywhere, regardless of income or access
+                        to a gym.</p>
+                </div>
+                <div class="meet-img-container">
+                    <div class="img-1-cont">
+                        <div class="">
+                            <img class="img-1-trainer" src="./assests/images/trainer1.png" alt="">
+                        </div>
+                        <div>
+                            <h4>Jerome Bell</h4>
+                            <small>Trainer</small>
+                        </div>
+                    </div>
+                    <div class="img-1-cont">
+                        <div >
+                            <img class="img-1-trainer" src="./assests/images/trainer2.png" alt="">
+                        </div>
+                        <div>
+                            <h4>Cameron Williamson</h4>
+                            <small>Trainer</small>
+                        </div>
+                    </div>
+                    <div class="img-1-cont">
+                        <div >
+                            <img class="img-1-trainer" src="./assests/images/trainer3.png" alt="">
+                        </div>
+                        <div>
+                            <h4>Darrell Steward</h4>
+                            <small>Trainer</small>
+                        </div>
+                    </div>
+                    <div class="img-1-cont">
+                        <div>
+                            <img class="img-1-trainer" src="./assests/images/trainer4.png" alt="">
+                        </div>
+                        <div>
+                            <h4>Dainne Russell</h4>
+                            <small>Trainer</small>
+                        </div>
+                    </div>
+                    <div class="img-1-cont">
+                        <div >
+                            <img class="img-1-trainer" src="./assests/images/trainer5.png" alt="">
+                        </div>
+                        <div>
+                            <h4>Cody Fisher</h4>
+                            <small>Trainer</small>
+                        </div>
+                    </div>
+                    <div class="img-1-cont">
+                        <div">
+                            <img class="img-1-trainer" src="./assests/images/trainer1.png" alt="">
+                        </div>
+                        <div>
+                            <h4>Theresa Webb</h4>
+                            <small>Trainer</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
 
