footer section start here

--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
             <div class="team-container">
                 <div class="team-text">
                     <h1 class="title-text ti-meet">Meet Our Team</h1>
-                    <p class="parapgraph-text">We believe fitness should be accessible to everyone, everywhere, regardless of income or access
+                    <p class="parapgraph-text">We believe fitness should be accessible to everyone, everywhere,
+                        regardless of income or access
                         to a gym.</p>
                 </div>
                 <div class="meet-img-container">
@@ -164,63 +165,86 @@
                         <div class="">
                             <img class="img-1-trainer" src="./assests/images/trainer1.png" alt="">
                         </div>
-                        <div>
-                            <h4>Jerome Bell</h4>
-                            <small>Trainer</small>
+                        <div class="meet-pic-text">
+                            <h4 class="title-text">Jerome Bell</h4>
+                            <small class="parapgraph-text">Trainer</small>
                         </div>
                     </div>
                     <div class="img-1-cont">
-                        <div >
+                        <div>
                             <img class="img-1-trainer" src="./assests/images/trainer2.png" alt="">
                         </div>
-                        <div>
-                            <h4>Cameron Williamson</h4>
-                            <small>Trainer</small>
+                        <div class="meet-pic-text">
+                            <h4 class="title-text">Cameron Williamson</h4>
+                            <small class="parapgraph-text">Trainer</small>
                         </div>
                     </div>
                     <div class="img-1-cont">
-                        <div >
+                        <div>
                             <img class="img-1-trainer" src="./assests/images/trainer3.png" alt="">
                         </div>
-                        <div>
-                            <h4>Darrell Steward</h4>
-                            <small>Trainer</small>
+                        <div class="meet-pic-text">
+                            <h4 class="title-text">Darrell Steward</h4>
+                            <small class="parapgraph-text">Trainer</small>
                         </div>
                     </div>
                     <div class="img-1-cont">
                         <div>
                             <img class="img-1-trainer" src="./assests/images/trainer4.png" alt="">
                         </div>
-                        <div>
-                            <h4>Dainne Russell</h4>
-                            <small>Trainer</small>
+                        <div class="meet-pic-text">
+                            <h4 class="title-text">Dainne Russell</h4>
+                            <small class="parapgraph-text">Trainer</small>
                         </div>
                     </div>
                     <div class="img-1-cont">
-                        <div >
+                        <div>
                             <img class="img-1-trainer" src="./assests/images/trainer5.png" alt="">
                         </div>
-                        <div>
-                            <h4>Cody Fisher</h4>
-                            <small>Trainer</small>
+                        <div class="meet-pic-text">
+                            <h4 class="title-text">Cody Fisher</h4>
+                            <small class="parapgraph-text">Trainer</small>
                         </div>
                     </div>
                     <div class="img-1-cont">
-                        <div">
-                            <img class="img-1-trainer" src="./assests/images/trainer1.png" alt="">
-                        </div>
                         <div>
-                            <h4>Theresa Webb</h4>
-                            <small>Trainer</small>
+                            <img class="img-1-trainer" src="./assests/images/trainer6.png" alt="">
+                        </div>
+                        <div class="meet-pic-text">
+                            <h4 class="title-text">Theresa Webb</h4>
+                            <small class="parapgraph-text">Trainer</small>
                         </div>
                     </div>
+
                 </div>
             </div>
         </section>
-
-
     </main>
     <footer>
+        <div class="footer-container">
+            <div class="foot-1">
+                <i class="fit">Fitness</i>
+                <p class="parapgraph-text">We believe fitness should be accessible to everyone, everywhere, regardless
+                    of income or access to a
+                    gym. With hundreds of professional workouts.</p>
+            </div>
+            <div class="foot-2">
+                <h1 class="title-text">Get Started</h1>
+                <p class="parapgraph-text">Service</p>
+                <p class="parapgraph-text">Contact Us</p>
+                <p class="parapgraph-text">Affiliate Program</p>
+                <p class="parapgraph-text">About Us</p>
+            </div>
+            <div class="foot-3">
+                <h1 class="title-text">Get Stared</h1>
+                <p class="parapgraph-text">Fitness</p>
+                <p class="parapgraph-text">Platform</p>
+                <p class="parapgraph-text">Workout Library</p>
+                <p class="parapgraph-text">App Design</p>
+
+
+            </div>
+        </div>
 
     </footer>
 
