footer section done

--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@
         <div class="footer-container">
             <div class="foot-1">
                 <i class="fit">Fitness</i>
-                <p class="parapgraph-text">We believe fitness should be accessible to everyone, everywhere, regardless
+                <p class="parapgraph-text">We believe fitness should be accessible to everyone,<br> everywhere, regardless
                     of income or access to a
-                    gym. With hundreds of professional workouts.</p>
+                    gym. <br>With hundreds of professional workouts.</p>
             </div>
             <div class="foot-2">
                 <h1 class="title-text">Get Started</h1>
@@ -244,7 +244,13 @@
 
 
             </div>
+           
         </div>
+        <div class="last-item">
+            <hr class="hr">
+            <p class="parapgraph-text foot-p">All right reserved @Fitness 2024</p>
+        </div>
+       
 
     </footer>
 
