full done for mobile device

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <button class="download-btn">Download App</button>
                 </div>
                 <div class="image-container">
-                    <img class="banner-img" src="./assests/images/images 2.png" alt="">
+                    <img class="banner-img" src="./assests/images/Images 2.png" alt="">
                     <div class="card-1">
                         <h1>500+</h1>
                         <small>Free Work Out Videos</small>
